openmediavault (7.7.10-1) stable; urgency=medium

  * Add `ID` column, hidden by default, to the `User/Group Permissions` table
    on the `Storage | Shared Folders | ACL` page.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Jun 2025 21:25:43 +0200

openmediavault (7.7.9-1) stable; urgency=medium

  * Update locale files.
  * Add UDEV rule to fix the duplicate serial number issue for external SATA
    hard drive adapter cable PA023U3.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Jun 2025 19:27:02 +0200

openmediavault (7.7.8-1) stable; urgency=medium

  * Update locale files.
  * Issue #1965: Hardening of the `omv-btrfs-dfree` command.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 22 May 2025 12:43:55 +0200

openmediavault (7.7.7-1) stable; urgency=medium

  * Display BTRFS details for each device of the filesystem.
  * Issue #1952: Fix bug in `openmediavault.fs.Filesystem.parent_device_file`
    Python method. This affects NVMe devices, for example.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 01 May 2025 08:19:33 +0200

openmediavault (7.7.6-1) stable; urgency=security

  * Add search field to the `Diagnostics | System Logs | Logs` page.
  * Display more information about the last/current scrub run on the
    BTRFS details page.
  * Improve validation of RPCs that contain passwords.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 25 Apr 2025 10:22:31 +0200

openmediavault (7.7.5-1) stable; urgency=medium

  * Update locale files.
  * Display the date of the last scrub run on the BTRFS details
    page.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 16 Apr 2025 19:06:20 +0200

openmediavault (7.7.4-1) stable; urgency=medium

  * Issue #1170: Add support to dynamically reload `select` form
    fields.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Apr 2025 12:50:50 +0200

openmediavault (7.7.3-1) stable; urgency=medium

  * Improve form layout.