@@ -1,7 +1,8 @@
 openmediavault (7.7.10-1) stable; urgency=medium
 
   * Add `ID` column, hidden by default, to the `User/Group Permissions` table
-    on the `Storage | Shared Folders | ACL` page.
+    on the `Storage | Shared Folders | ACL` page. Additionally display the UID
+    and GID in the `Owner` and `Group` dropdown boxes.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Jun 2025 21:25:43 +0200
 
